# codec_parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  macros.h  mathops.h
src/: CMakeLists.txt  atsc_a53.c  atsc_a53.h  avassert.h  avstring.c  avstring.h  bprint.c  bswap.h  buffer.c  buffer.h  buffer_internal.h  bytestream.h  codec_id.h  common.h  defs.h  dynamic_hdr10_plus.c  dynamic_hdr10_plus.h  dynarray.h  error.h  get_bits.h  golomb.c  golomb.h  h263.c  h263.h  h263data.c  h263data.h  h264.h  h2645_parse.c  h2645_parse.h  h264_ps.c  h264_ps.h  h264data.c  h264data.h  hdr_dynamic_metadata.c  hdr_dynamic_metadata.h  hevc.h  hevc_data.c  hevc_ps.c  hevc_ps.h  hevc_sei.c  (+21 more)
